--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -3,6 +3,7 @@
    ========================================================================== */
 
 .masthead {
+  display: none;
   position: relative;
   border-bottom: 1px solid $border-color;
   -webkit-animation: intro 0.3s both;
@@ -15,7 +16,7 @@
     @include container;
     @include clearfix;
     padding: 1em 1em 1em;
-    font-family: $serif;
+    font-family: $sans-serif;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
