--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,7 +28,7 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : $helvetica
+$global-font-family         : $helvetica;
 $header-font-family         : $helvetica;
 $caption-font-family        : $helvetica;
 
